# llmware-AAIR

examples/Evaluation/: run_evaluation.py
experiments/parsers/: base.py  docling.py  docling_parser.py  dolphin.py  marker.py  mineru.py  openparse.py  unstructured.py
llmware/: evaluation.py
llmware/RAGMethods/LinearRAG/: README.md  __init__.py  utils.py
llmware/RAGMethods/LinearRAG/adapters/: __init__.py  embedding_adapter.py  evaluation_adapter.py  llm_wrapper.py
llmware/RAGMethods/LinearRAG/chunking/: __init__.py  config.py  (+1 more)
llmware/evaluation/: __init__.py  answer_evaluator.py  metrics.py  models.py  rag_evaluator.py  retrieval.py  test_2wiki_evaluation.py
ragbench/: README.md  main.py  pyproject.toml
ragbench/src/ragbench/: __init__.py  config.py
ragbench/src/ragbench/chunker/: __init__.py  base.py  fixed_size.py
ragbench/src/ragbench/datasets/: __init__.py  base.py  custom.py
ragbench/src/ragbench/encoder/: __init__.py  base.py  octen.py  qwen.py  voyage.py
ragbench/src/ragbench/evaluation/: __init__.py  metrics.py
ragbench/src/ragbench/generator/: __init__.py  base.py  llm.py  noop.py
ragbench/src/ragbench/parser/: __init__.py  base.py  docling.py  haystack.py  llamaindex.py  llmware.py  ragflow.py
ragbench/src/ragbench/reranker/: __init__.py  base.py  cross_encoder.py  noop.py
ragbench/src/ragbench/results/: __init__.py  models.py  storage.py
ragbench/src/ragbench/retriever/: __init__.py  base.py  hybrid.py  naive.py  semantic.py  text.py
ragbench/src/ragbench/runner/: __init__.py  base.py
ragbench/src/ragbench/structures/: io.py
(+8 files in other folders)
